--- a/dev.ipynb
+++ b/dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "e02a25fa",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "ae12c215",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "0543448e",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "972994ce",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "394070d8",
    "metadata": {},
    "outputs": [
@@ -130,10 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "d5f53e51",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\HP\\dev\\gpt\\.venv\\Lib\\site-packages\\torch\\_subclasses\\functional_tensor.py:279: UserWarning: Failed to initialize NumPy: No module named 'numpy' (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\pytorch\\torch\\csrc\\utils\\tensor_numpy.cpp:81.)\n",
+      "  cpu = _conversion_method_template(device=torch.device(\"cpu\"))\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -209,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ef82d536",
    "metadata": {},
    "outputs": [],
@@ -222,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "7b365941",
    "metadata": {},
    "outputs": [
@@ -232,7 +240,7 @@
        "tensor([18, 47, 56, 57, 58,  1, 15, 47, 58])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ee784010",
    "metadata": {},
    "outputs": [
@@ -276,39 +284,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "id": "eb7889e4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[7, 9, 6],\n",
-       "         [3, 6, 5]],\n",
-       "\n",
-       "        [[6, 8, 6],\n",
-       "         [4, 7, 4]],\n",
-       "\n",
-       "        [[6, 4, 9],\n",
-       "         [5, 4, 4]]])"
+       "tensor([9, 3, 3])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# samples\n",
-    "torch.randint(3, 10, (3, 2, 3)) # low, high, (dimension)"
+    "torch.randint(3, 10, (3,)) # low, high, (dimension)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "id": "299dab9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 420085, 1079396,   74974,  175044])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.randint(len(data) - block_size, (4, ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "458ecce8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[18, 47, 56, 57, 58,  1, 15, 47],\n",
+       "        [47, 56, 57, 58,  1, 15, 47, 58]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.stack([data[i:block_size+i] for i in range(2)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "340a2b53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inputs:\n",
+      "torch.Size([4, 8])\n",
+      "tensor([[24, 43, 58,  5, 57,  1, 46, 43],\n",
+      "        [44, 53, 56,  1, 58, 46, 39, 58],\n",
+      "        [52, 58,  1, 58, 46, 39, 58,  1],\n",
+      "        [25, 17, 27, 10,  0, 21,  1, 54]])\n",
+      "targets:\n",
+      "torch.Size([4, 8])\n",
+      "tensor([[43, 58,  5, 57,  1, 46, 43, 39],\n",
+      "        [53, 56,  1, 58, 46, 39, 58,  1],\n",
+      "        [58,  1, 58, 46, 39, 58,  1, 46],\n",
+      "        [17, 27, 10,  0, 21,  1, 54, 39]])\n"
+     ]
+    }
+   ],
    "source": [
     "torch.manual_seed(1337) \n",
     "batch_size = 4 # how many independent sequences will we process in parallel \n",
@@ -317,8 +380,143 @@
     "def get_batch(split): \n",
     "    # generate a small batch of data of inputs x and targets y \n",
     "    data = train_data if split == 'train' else val_data \n",
-    "    ix = torch.randint(len(data) - block_size, (batch_size)) \n",
+    "    ix = torch.randint(len(data) - block_size, (batch_size, )) # random numbers in batch_size \n",
+    "    x = torch.stack([data[i:i+block_size] for i in ix])\n",
+    "    y = torch.stack([data[i+1:i+block_size+1] for i in ix])\n",
+    "    return x, y \n",
+    "\n",
+    "xb, yb = get_batch('train') \n",
+    "print(\"inputs:\") \n",
+    "print(xb.shape) \n",
+    "print(xb) \n",
+    "print('targets:')\n",
+    "print(yb.shape) \n",
+    "print(yb)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "def134ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "when input is [24] the target: 43\n",
+      "when input is [24, 43] the target: 58\n",
+      "when input is [24, 43, 58] the target: 5\n",
+      "when input is [24, 43, 58, 5] the target: 57\n",
+      "when input is [24, 43, 58, 5, 57] the target: 1\n",
+      "when input is [24, 43, 58, 5, 57, 1] the target: 46\n",
+      "when input is [24, 43, 58, 5, 57, 1, 46] the target: 43\n",
+      "when input is [24, 43, 58, 5, 57, 1, 46, 43] the target: 39\n",
+      "when input is [44] the target: 53\n",
+      "when input is [44, 53] the target: 56\n",
+      "when input is [44, 53, 56] the target: 1\n",
+      "when input is [44, 53, 56, 1] the target: 58\n",
+      "when input is [44, 53, 56, 1, 58] the target: 46\n",
+      "when input is [44, 53, 56, 1, 58, 46] the target: 39\n",
+      "when input is [44, 53, 56, 1, 58, 46, 39] the target: 58\n",
+      "when input is [44, 53, 56, 1, 58, 46, 39, 58] the target: 1\n",
+      "when input is [52] the target: 58\n",
+      "when input is [52, 58] the target: 1\n",
+      "when input is [52, 58, 1] the target: 58\n",
+      "when input is [52, 58, 1, 58] the target: 46\n",
+      "when input is [52, 58, 1, 58, 46] the target: 39\n",
+      "when input is [52, 58, 1, 58, 46, 39] the target: 58\n",
+      "when input is [52, 58, 1, 58, 46, 39, 58] the target: 1\n",
+      "when input is [52, 58, 1, 58, 46, 39, 58, 1] the target: 46\n",
+      "when input is [25] the target: 17\n",
+      "when input is [25, 17] the target: 27\n",
+      "when input is [25, 17, 27] the target: 10\n",
+      "when input is [25, 17, 27, 10] the target: 0\n",
+      "when input is [25, 17, 27, 10, 0] the target: 21\n",
+      "when input is [25, 17, 27, 10, 0, 21] the target: 1\n",
+      "when input is [25, 17, 27, 10, 0, 21, 1] the target: 54\n",
+      "when input is [25, 17, 27, 10, 0, 21, 1, 54] the target: 39\n"
+     ]
+    }
+   ],
+   "source": [
+    "for b in range(batch_size): \n",
+    "    for t in range(block_size): \n",
+    "        context = xb[b, :t+1] \n",
+    "        target = yb[b, t] \n",
+    "        print(f\"when input is {context.tolist()} the target: {target}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e21632d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[-1.5101, -0.0948,  1.0927,  ..., -0.6126, -0.6597,  0.7624],\n",
+      "         [ 0.3323, -0.0872, -0.7470,  ..., -0.6716, -0.9572, -0.9594],\n",
+      "         [ 0.2475, -0.6349, -1.2909,  ...,  1.3064, -0.2256, -1.8305],\n",
+      "         ...,\n",
+      "         [ 0.5978, -0.0514, -0.0646,  ..., -1.4649, -2.0555,  1.8275],\n",
+      "         [ 1.0901,  0.2170, -2.9996,  ..., -0.5472, -0.8017,  0.7761],\n",
+      "         [ 0.3323, -0.0872, -0.7470,  ..., -0.6716, -0.9572, -0.9594]],\n",
+      "\n",
+      "        [[ 1.0541,  1.5018, -0.5266,  ...,  1.8574,  1.5249,  1.3035],\n",
+      "         [-0.1324, -0.5489,  0.1024,  ..., -0.8599, -1.6050, -0.6985],\n",
+      "         [-0.6722,  0.2322, -0.1632,  ...,  0.1390,  0.7560,  0.4296],\n",
+      "         ...,\n",
+      "         [ 1.0901,  0.2170, -2.9996,  ..., -0.5472, -0.8017,  0.7761],\n",
+      "         [ 1.1513,  1.0539,  3.4105,  ..., -0.5686,  0.9079, -0.1701],\n",
+      "         [ 0.2475, -0.6349, -1.2909,  ...,  1.3064, -0.2256, -1.8305]],\n",
+      "\n",
+      "        [[-0.2103,  0.4481,  1.2381,  ...,  1.3597, -0.0821,  0.3909],\n",
+      "         [ 0.2475, -0.6349, -1.2909,  ...,  1.3064, -0.2256, -1.8305],\n",
+      "         [ 0.5978, -0.0514, -0.0646,  ..., -1.4649, -2.0555,  1.8275],\n",
+      "         ...,\n",
+      "         [ 1.1513,  1.0539,  3.4105,  ..., -0.5686,  0.9079, -0.1701],\n",
+      "         [ 0.2475, -0.6349, -1.2909,  ...,  1.3064, -0.2256, -1.8305],\n",
+      "         [ 0.5978, -0.0514, -0.0646,  ..., -1.4649, -2.0555,  1.8275]],\n",
+      "\n",
+      "        [[ 0.0691,  0.2990, -1.4717,  ...,  0.1517,  0.8528,  0.0604],\n",
+      "         [-0.4892, -2.5589,  1.4134,  ..., -1.4296,  0.2347, -1.2034],\n",
+      "         [-0.1600,  1.3981, -0.7047,  ..., -1.9908,  0.8574, -2.1603],\n",
+      "         ...,\n",
+      "         [-2.1910, -0.7574,  1.9656,  ..., -0.3580,  0.8585, -0.6161],\n",
+      "         [ 0.5978, -0.0514, -0.0646,  ..., -1.4649, -2.0555,  1.8275],\n",
+      "         [-0.6787,  0.8662, -1.6433,  ...,  2.3671, -0.7775, -0.2586]]],\n",
+      "       grad_fn=<EmbeddingBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn as nn \n",
+    "from torch.nn import functional as F \n",
+    "torch.manual_seed(1337) \n",
+    "\n",
+    "class BigramLanguageModel(nn.Module): \n",
+    "    def __init__(self, vocab_size): \n",
+    "        super().__init__() \n",
+    "        # taking a tensor input (word ids, tokenized) into vector representations \n",
+    "        # num_embeddings means how large is your vocabulary (in this case 65 unique symbols) \n",
+    "        # embedding_dim means how long is the vector representation for each symbols (each symbol will be represented in 65 dimension vector)\n",
+    "        self.token_embedding_table = nn.Embedding(num_embeddings=vocab_size, embedding_dim=vocab_size) \n",
+    "\n",
+    "    def forward(self, input_tensors, target_tensors): \n",
+    "        # forward pass without activation function\n",
+    "        logits = self.token_embedding_table(input_tensors)\n",
+    "\n",
+    "        loss = F.cross_entropy(logits, target_tensors)\n",
+    "\n",
+    "        return logits\n",
+    "    \n",
+    "m = BigramLanguageModel(voc_size)\n",
+    "out = m(xb, yb) \n",
+    "print(out)"
    ]
   }
  ],
