--- a/dev.ipynb
+++ b/dev.ipynb
@@ -10882,11 +10882,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "85f332e3",
+   "execution_count": 73,
+   "id": "70924c8e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.is_available()"
+   ]
   }
  ],
  "metadata": {
