--- a/dev.ipynb
+++ b/dev.ipynb
@@ -10900,6 +10900,69 @@
    "source": [
     "torch.cuda.is_available()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "efb8e572",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[35, 53, 59, 50, 42,  1, 63, 53, 59,  1, 54, 56, 53, 41, 43, 43, 42,  1,\n",
+       "         43, 57, 54, 43, 41, 47, 39, 50, 50, 63]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.tensor(encode(\"Would you proceed especially\")).unsqueeze(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "721b9cbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Would you proceed especially s\n",
+      "Lowa wafe tham,\n",
+      "I ctw, re laint w rayad thawot.\n",
+      "Whar tceng au wat pegiere at thee\n",
+      "Hess d or, t sowo-brthe otig ce.\n",
+      "\n",
+      "ED y fom batou ous!\n",
+      "KI yeng, t r tl t,\n",
+      "TI honorongk's gravere?\n",
+      "BHan:\n",
+      "The fimy hy wsqus, Couthee.\n",
+      "CHes on\n",
+      "br arowath ayber her careX--thoustheat terene I her\n",
+      "EXERDUSh; a wanopild pe\n",
+      "Bupo tirnchofise;;\n",
+      "Win ilo ncowimachan, in'trite iofous?\n",
+      "D:\n",
+      "Towobe oly cares gtyear ll hes ICombete!\n",
+      "Thty\n",
+      "OLoiche tind pthy thedis ofre to'nolow, fer, hotary pen?\n",
+      "Hee.\n",
+      "\n",
+      "Wau rimistchave wigan s nginspr\n"
+     ]
+    }
+   ],
+   "source": [
+    "ctx = torch.tensor(encode(\"Would you proceed especially\"))\n",
+    "print(decode(m.generate(ctx.unsqueeze(0), max_new_tokens=500)[0].tolist()))"
+   ]
   }
  ],
  "metadata": {
